hphp/hack/test/typecheck/new_inference/switch_tyvar.php.rust_elab.exp
File "switch_tyvar.php", line 4, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
